T1916-0 Fix plus icon vertical alignment

--- a/grails-app/assets/stylesheets/application/_style.scss
+++ b/grails-app/assets/stylesheets/application/_style.scss
@@ -1434,9 +1434,6 @@ th {
   }
 }
 
-$widget-card-height: 270px;
-$widget-card-header-height: 42px;
-
 .widgets {
   padding: $is-spacer-x;
   min-height: 250px;
