--- a/grails-app/assets/stylesheets/application/_variables.scss
+++ b/grails-app/assets/stylesheets/application/_variables.scss
@@ -93,6 +93,9 @@ $is-story-heigth-sm: 127px;
 $is-feature-width: 178px;
 $is-feature-height: 157px;
 
+$widget-card-height: 270px;
+$widget-card-header-height: 42px;
+
 $is-font-family: averta-regular, Helvetica, Arial, sans-serif;
 $is-font-family-bold: averta-bold, Helvetica, Arial, sans-serif;
 
